crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/badGprimParent.usda
version https://git-lfs.github.com/spec/v1
oid sha256:5d346973cce24cfeabea6fd40548c7f3f1ee42c5c1906f5bf55a1c6da5835458
size 187
